# monitorfish

./: .dockerignore  .editorconfig  .env.example  .env.local.defaults  .gitattributes  .gitignore  .secrets.example  .sonarcloud.properties  0001-frontend-runtime-env-var-injection.md  CONTRIBUTING.md  LICENCE  Makefile  README.md  SECURITY.md  docker-compose.yml  inquietude.txt  package-lock.json  package.json  prometheus.yml  pull_request_template.md  review.md  settings.gradle.kts  sonar-project.properties
data_warehouse/: .env.template  .env.test  config.py  main.py  pyproject.toml
data_warehouse/forklift/: config.py  db_config.py  db_engines.py  main.py  read_query.py
data_warehouse/forklift/pipeline/: flows_config.py  generic_tasks.py  utils.py
data_warehouse/src/: read_query.py
data_warehouse/src/pipeline/: flows_config.py  generic_tasks.py
data_warehouse/tests/: conftest.py  mocks.py
data_warehouse/tests/test_pipeline/: test_processing.py
datascience/: .claudeignore  .env.template  .env.test  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile-dam-si  config.py  dam-si-jupyter-config.py  docker-compose-dam-si.yml  docker-compose-no-proxy.yml  docker-compose.yml  dummy.py  dummy_modification.py  environment.yml  main.py  new_dummy.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
datascience/docs/: .readthedocs.yaml  README.rst  readthedocs.yml  requirements.txt  update_tx_config.sh
datascience/docs/.tx/: config
datascience/docs/pot/: activity-overview.pot  alerts.pot  architecture.pot  authentication.pot  containerization.pot  contributing.pot  control-priority-steering.pot  data-sources.pot  deployment.pot  feature-presentation.pot  fleet-segments.pot  flows.pot  groups-of-vessels.pot  index.pot  inspection-data-entry.pot  overview.pot  prior-notifications.pot  reference.pot  regulation.pot  risk-factor.pot  vessel-profiles.pot  vessel_identification.pot  vms-beacon-monitoring.pot
datascience/docs/source/: activity-overview.rst  alerts.rst  architecture.rst  conf.py  containerization.rst  contributing.rst  controls.rst  data-sources.rst  deployment.rst  feature-presentation.rst  fleet-segments.rst  flows.rst  groups-of-vessels.rst  index.rst  infractions.rst  overview.rst  prior-notifications.rst  reference.rst  regulation.rst  risk-factor.rst  vessel_identification.rst  vms-beacon-monitoring.rst
datascience/scripts/: start-flows.sh  start-server.sh  stop-server.sh
datascience/src/: db_config.py  flows_config.py  generic_tasks.py  processing.py  read_query.py  utils.py
datascience/src/data/: pno_types.csv  segments_2025.csv
datascience/src/entities/: alerts.py  control_units.py  monitorfish_healthcheck.py
datascience/src/exceptions/: monitorfish_health_error.py
datascience/src/flows/: activity_visualizations.py  admin_areas.py  anchorages.py  beacons.py  clean_flow_runs.py  control_anteriority.py  control_units.py  controls.py  controls_open_data.py  current_segments.py  distribute_pnos.py  districts.py  email_actions_to_units.py  enrich_logbook.py  enrich_positions.py  export_species.py  facade_areas.py  fao_areas.py  fishing_gear_codes.py  foreign_fmcs.py  infractions.py  init_2025_segments.py  init_pno_subscriptions.py  init_pno_types.py  init_species_groups.py  isscaap_codes.py  last_positions.py  logbook.py  missing_dep_alerts.py  missing_far_alerts.py  missing_trip_numbers.py  missions.py  notify_beacon_malfunctions.py  ports.py  position_alerts.py  recompute_controls_segments.py  refresh_materialized_view.py  regulations.py  regulations_checkup.py  regulations_open_data.py  (+8 more)
datascience/src/helpers/: country_codes.py  fao_areas.py  segments.py  vessels.py
datascience/src/parsers/: utils.py
datascience/src/pipeline/: flows_config.py  generic_tasks.py  processing.py  schedules.py  utils.py
datascience/src/shared_tasks/: alerts.py  control_flow.py  control_units.py  datagouv.py  dates.py  facades.py  healthcheck.py  infrastructure.py  pnos.py  positions.py  risk_factors.py  segments.py  vessels.py
datascience/src/sms/: base_template.jinja  malfunction_at_sea_initial_notification.jinja  malfunction_at_sea_reminder.jinja
datascience/src/utils/: Regroupement.ipynb  anonymization.py  database.py  ers.py  flux.py  geocode.py  graphs.py  update_test_data.py  xml_analysis.py
datascience/test/test_pipeline/: test_parsers.py  test_processing.py
datascience/test/test_utils/: test_ers.py
datascience/tests/: conftest.py  docker-compose.yml  mocks.py  test_db_config.py  test_processing.py  test_utils.py
datascience/tests/test_flows/: conftest.py  test_activity_visualizations.py  test_beacons.py  test_control_anteriority.py  test_control_units.py  test_controls.py  test_controls_open_data.py  test_current_segments.py  test_distribute_pnos.py  test_districts.py  test_email_actions_to_units.py  test_enrich_logbook.py  test_enrich_positions.py  test_fao_areas.py  test_fishing_gear_codes.py  test_foreign_fmcs.py  test_infractions.py  test_init_pno_subscriptions.py  test_init_pno_types.py  test_init_segments_2025.py  test_last_positions.py  test_logbook.py  test_missing_dep_alerts.py  test_missing_far_alerts.py  test_missing_trip_numbers.py  test_missions.py  test_notify_beacon_malfunctions.py  test_ports.py  test_position_alerts.py  test_recompute_controls_segments.py  test_refresh_materialized_views.py  test_regulations_checkup.py  test_regulations_open_data.py  test_risk_factor.py  test_species.py  test_update_beacon_malfunctions.py  (+3 more)
pipeline/: .coverage  .env.template  .env.test  .monitorfish  .monitorfish.template  config.py  main.py  pyproject.toml
pipeline/docs/: .readthedocs.yaml  requirements.txt
pipeline/eu-ers-v3.1/: ers-3.html  ers-3.xsd  ers-codes-3.html  ers-codes-3.xsd  ers-operations-3.html  ers-operations-3.xsd  ers.wsdl
pipeline/src/: db_config.py  deployments.py  flows_config.py  generic_tasks.py  processing.py  read_query.py
pipeline/tests/: conftest.py  docker-compose.yml  mocks.py  test_db_config.py  test_deployments.py  test_flows_config.py  test_main.py  test_processing.py
(+9832 files in other folders)
