[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vincent <vincent.chery@m4x.org>"]

[tool.poetry.dependencies]
python = "3.8.13"
pandas = "1.2"
black = "^20.8b1"
isort = "^5.7.0"
coverage = "^5.4"
pre-commit = "^2.10.1"
python-dotenv = "^0.15.0"
tqdm = "^4.56.2"
SQLAlchemy = "~1.3"
cx-Oracle = "^8.1.0"
psycopg2 = "^2.8.6"
Scrapy = "^2.4.1"
flake8 = "^3.8.4"
docker-compose = "^1.28.4"
simplejson = "^3.17.2"
GeoAlchemy2 = "^0.9.4"
Rtree = "^0.9.7"
Jinja2 = "^3.0.2"
pytz = "^2021.3"
h3 = "^3.7.3"
vptree = "^1.2"
pytest = "^6.2.5"
geopandas = "^0.10.2"
PyPDF2 = "^2.1.0"
weasyprint = "^55.0"
pytest-dotenv = "^0.5.2"
css-inline = "0.10.1"
prefect = "^1.3"
requests-mock = "^1.10.0"
duckdb = "^0.8.1"

[tool.poetry.dev-dependencies]
plotly = "^4.14.3"
XlsxWriter = "^1.3.7"
jupyter = "^1.0.0"
matplotlib = "^3.3.4"
openpyxl = "^3.0.6"
matplotlib-venn = "^0.11.6"
seaborn = "^0.11.1"
line-profiler = "^3.1.0"
ipywidgets = "^7.6.3"
h3 = "^3.7.1"
pyarrow = "^3.0.0"
xlrd = "^2.0.1"
tabula-py = "^2.2.0"
jupyterlab = "^3.0.8"
grip = "^4.5.2"
sphinxcontrib-fulltoc = "^1.2.0"
Sphinx = "^4.0.3"
sphinx-rtd-theme = "^0.5.2"
Faker = "^8.10.1"
sphinx-intl = "^2.0.1"
sphinx-autoapi = "^1.8.4"
transifex-client = "^0.14.3"
prefect = {version = "^1.3", extras = ["viz"]}

[tool.poetry.group.dev.dependencies]
pygeos = "^0.14"
odfpy = "^1.4.1"
fuzzywuzzy = "^0.18.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=42",
    "wheel"
]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ['.']
omit = ['src/utils/*', 'tests/*']

[tool.pytest.ini_options]
env_files = [
    ".env.test"
]