[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vincent <vincent.chery@m4x.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pandas = {extras = ["postgresql"], version = "^2.2.1"}
black = "^24.3.0"
isort = "^5.12.0"
coverage = "^7.6.0"
pre-commit = "^3.8.0"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"
cx-oracle = "^8.3.0"
scrapy = "^2.11.0"
simplejson = "^3.19.2"
geoalchemy2 = "^0.15.2"
rtree = "^1.3.0"
jinja2 = "^3.1.2"
pytz = "^2023.3.post1"
vptree = "^1.3"
pytest = "^8.3.2"
geopandas = "^0.14.0"
weasyprint = "^62.3"
pytest-dotenv = "^0.5.2"
css-inline = "^0.14.1"
prefect = "^1.3"
requests-mock = "^1.11.0"
duckdb = "^0.10.1"
h3 = "^3.7.6"
pypdf = "^4.3.1"


[tool.poetry.group.dev.dependencies]
plotly = "^5.17.0"
xlsxwriter = "^3.1.8"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
openpyxl = "^3.1.5"
matplotlib-venn = "^0.11.9"
seaborn = "^0.13.0"
line-profiler = "^4.1.1"
ipywidgets = "^8.1.3"
pyarrow = "^14.0.1"
xlrd = "^2.0.1"
tabula-py = "^2.8.2"
jupyterlab = "^4.2.3"
grip = "^4.6.2"
sphinxcontrib-fulltoc = "^1.2.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
faker = "^25.9.1"
sphinx-intl = "^2.1.0"
sphinx-autoapi = "^3.1.2"
prefect = {version = "1.3", extras = ["viz"]}
pygeos = "^0.14"
odfpy = "^1.4.1"
fuzzywuzzy = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ['.']
omit = ['src/utils/*', 'tests/*']

[tool.pytest.ini_options]
env_files = [
    ".env.test"
]