[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vincent <vincent.chery@m4x.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pandas = {extras = ["postgresql"], version = "^2.2.1"}
black = "^24.3.0"
isort = "^5.12.0"
coverage = "^7.3.2"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"
cx-oracle = "^8.3.0"
scrapy = "^2.11.0"
simplejson = "^3.19.2"
geoalchemy2 = "^0.16.0"
rtree = "^1.0.1"
jinja2 = "^3.1.2"
pytz = "^2023.3.post1"
vptree = "^1.3"
pytest = "^8.0.2"
geopandas = "^1.0.1"
weasyprint = "^62.0"
pytest-dotenv = "^0.5.2"
css-inline = "^0.14.3"
prefect = "^1.3"
requests-mock = "^1.11.0"
duckdb = "^0.10.1"
h3 = "^3.7.6"
pypdf = "^5.1.0"
fiona = "^1.10.1"


[tool.poetry.group.dev.dependencies]
plotly = "^5.24.1"
xlsxwriter = "^3.1.8"
jupyter = "^1.1.1"
matplotlib = "^3.9.3"
openpyxl = "^3.1.5"
matplotlib-venn = "^1.1.1"
seaborn = "^0.13.0"
line-profiler = "^4.1.1"
ipywidgets = "^8.1.5"
pyarrow = "^18.1.0"
xlrd = "^2.0.1"
tabula-py = "^2.8.2"
jupyterlab = "^4.3.1"
grip = "^4.6.2"
sphinxcontrib-fulltoc = "^1.2.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
faker = "^33.1.0"
sphinx-intl = "^2.3.1"
sphinx-autoapi = "^3.4.0"
prefect = {version = "1.3", extras = ["viz"]}
pygeos = "^0.14"
odfpy = "^1.4.1"
fuzzywuzzy = "^0.18.0"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ['.']
omit = ['src/utils/*', 'tests/*']

[tool.pytest.ini_options]
env_files = [
    ".env.test"
]