[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vincent <vincent.chery@m4x.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.5"
pandas = {extras = ["postgresql"], version = "^2.3.0"}
black = "^25.1.0"
isort = "^6.0.1"
coverage = "^7.9.0"
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
python-dotenv = "^1.1.0"
cx-oracle = "^8.3.0"
scrapy = "^2.13.2"
simplejson = "^3.20.1"
geoalchemy2 = "^0.17.1"
rtree = "^1.4.0"
jinja2 = "^3.1.6"
pytz = "^2025.2"
vptree = "^1.3"
pytest = "^8.4.0"
geopandas = "^1.1.0"
weasyprint = "^64.1"
pytest-dotenv = "^0.5.2"
css-inline = "^0.14.6"
requests-mock = "^1.11.0"
h3 = "^4.2.2"
pypdf = "^6.4.0"
fiona = "^1.10.1"
clickhouse-connect = "^0.8.17"
pyarrow = "^20.0.0"
keplergl = "^0.3.7"
prefect = {extras = ["docker"], version = "^3.4.7"}
duckdb = "^1.3.1"


[tool.poetry.group.dev.dependencies]
plotly = "^6.0.1"
xlsxwriter = "^3.2.2"
jupyter = "^1.1.1"
matplotlib = "^3.10.1"
openpyxl = "^3.1.5"
matplotlib-venn = "^1.1.2"
seaborn = "^0.13.0"
line-profiler = "^4.2.0"
xlrd = "^2.0.1"
tabula-py = "^2.8.2"
grip = "^4.6.2"
sphinxcontrib-fulltoc = "^1.2.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^3.0.2"
faker = "^33.1.0"
sphinx-intl = "^2.3.1"
sphinx-autoapi = "^3.6.0"
odfpy = "^1.4.1"
fuzzywuzzy = "^0.18.0"
scikit-learn = "^1.6.1"
ipywidgets = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ['.']
omit = ['src/utils/*', 'tests/*']

[tool.pytest.ini_options]
env_files = [
    ".env.test"
]