[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vincent <vincent.chery@m4x.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.5"
pandas = {extras = ["postgresql"], version = "^2.3.3"}
black = "^25.12.0"
isort = "^6.0.1"
coverage = "^7.13.1"
pre-commit = "^4.5.1"
flake8 = "^7.2.0"
python-dotenv = "^1.2.1"
cx-oracle = "^8.3.0"
scrapy = "^2.14.0"
simplejson = "^3.20.2"
geoalchemy2 = "^0.18.1"
rtree = "^1.4.1"
jinja2 = "^3.1.6"
pytz = "^2025.2"
vptree = "^1.3"
pytest = "^8.4.0"
geopandas = "^1.1.2"
weasyprint = "^67.0"
pytest-dotenv = "^0.5.2"
css-inline = "^0.19.0"
requests-mock = "^1.11.0"
h3 = "^4.4.1"
pypdf = "^6.6.0"
fiona = "^1.10.1"
clickhouse-connect = "^0.10.0"
pyarrow = "^20.0.0"
keplergl = "^0.3.7"
prefect = {extras = ["docker"], version = "^3.6.9"}
duckdb = "^1.4.3"


[tool.poetry.group.dev.dependencies]
plotly = "^6.5.0"
xlsxwriter = "^3.2.9"
jupyter = "^1.1.1"
matplotlib = "^3.10.8"
openpyxl = "^3.1.5"
matplotlib-venn = "^1.1.2"
seaborn = "^0.13.0"
line-profiler = "^4.2.0"
xlrd = "^2.0.1"
tabula-py = "^2.8.2"
grip = "^4.6.2"
sphinxcontrib-fulltoc = "^1.2.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^3.0.2"
sphinx-intl = "^2.3.2"
sphinx-autoapi = "^3.6.1"
odfpy = "^1.4.1"
fuzzywuzzy = "^0.18.0"
scikit-learn = "^1.8.0"
ipywidgets = "^8.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ['.']
omit = ['src/utils/*', 'tests/*']

[tool.pytest.ini_options]
env_files = [
    ".env.test"
]