[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vincent <vincent.chery@m4x.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.5"
pandas = {extras = ["postgresql"], version = "^2.3.3"}
black = "^25.12.0"
isort = "^6.0.1"
coverage = "^7.13.3"
pre-commit = "^4.5.1"
flake8 = "^7.2.0"
python-dotenv = "^1.2.1"
scrapy = "^2.14.1"
simplejson = "^3.20.2"
geoalchemy2 = "^0.18.1"
rtree = "^1.4.1"
jinja2 = "^3.1.6"
pytz = "^2025.2"
vptree = "^1.3"
pytest = "^9.0.2"
geopandas = "^1.1.2"
weasyprint = "^67.0"
pytest-dotenv = "^0.5.2"
css-inline = "^0.19.1"
requests-mock = "^1.11.0"
h3 = "^4.4.2"
pypdf = "^6.6.2"
fiona = "^1.10.1"
clickhouse-connect = "^0.10.0"
pyarrow = "^22.0.0"
prefect = {version = "3.6.9", extras = ["docker"]}
duckdb = "^1.4.4"
oracledb = "^3.4.2"


[tool.poetry.group.dev.dependencies]
plotly = "^6.5.2"
xlsxwriter = "^3.2.9"
jupyter = "^1.1.1"
matplotlib = "^3.10.8"
openpyxl = "^3.1.5"
matplotlib-venn = "^1.1.2"
seaborn = "^0.13.0"
line-profiler = "^4.2.0"
xlrd = "^2.0.1"
tabula-py = "^2.8.2"
grip = "^4.6.2"
sphinxcontrib-fulltoc = "^1.2.0"
sphinx = "^9.1.0"
sphinx-rtd-theme = "^3.1.0"
sphinx-intl = "^2.3.2"
sphinx-autoapi = "^3.6.1"
odfpy = "^1.4.1"
fuzzywuzzy = "^0.18.0"
scikit-learn = "^1.8.0"
ipywidgets = "^8.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ['.']
omit = ['src/utils/*', 'tests/*']

[tool.pytest.ini_options]
env_files = [
    ".env.test"
]